fixed alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,75 +7,4 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "variables";
 @import "transitions";
 @import "buttons";
-
-
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
- background: url('../images/plantainvsbanana.jpg');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
- }
-
- /*  font and background */
-body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;
-  background: url('../images/white_brick_wall.png') center center fixed;
-  height: 500px;
-}
-
-
-/* animation for header */
-h1 {
-  animation-duration: 3s;
-  animation-name: slidein;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 5em;
-  letter-spacing: -2px;
-  border-bottom: 2px solid black;
-  text-transform: lowercase;
-  color: green;
-}
-
-
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-//}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
+@import "content";
